--- a/nori_and_chako.html
+++ b/nori_and_chako.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nori & Chako</title>
+    <style>img {max-width: 800px;}</style>
 </head>
 <body>
     <header>
